--- a/WebAPI/WebAPI/Web.config
+++ b/WebAPI/WebAPI/Web.config
@@ -95,7 +95,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="dbAzure" connectionString="data source=todoappxamarin.database.windows.net;initial catalog=todoapp;user id=farreguin;password=F3rnand0;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="dbAzure" connectionString="data source=todoappxamarin.database.windows.net;initial catalog=todoapp;user id=********;password=********;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.diagnostics>
     <trace autoflush="true" indentsize="0">
